# todoapp-starlite-beanie-svelte

./: .gitignore  pyproject.toml  run.sh
todoapp/: auth.py  main.py  utils.py
todoapp-frontend/: package.json  pnpm-lock.yaml  svelte.config.js  tailwind.config.cjs
todoapp-frontend/src/: app.html
todoapp-frontend/src/lib/: auth.store.ts  models.ts
todoapp-frontend/src/lib/store/: auth.ts  snackbar.ts
todoapp-frontend/src/routes/: +layout.svelte  +page.svelte  ItemEdit.svelte  Snackbar.svelte  app.css  todo.store.ts
todoapp-frontend/src/routes/login/: +page.svelte
todoapp/controllers/: __init__.py  _utils.py  todoitem.py
todoapp/models/: __init__.py  todoitem.py  user.py
