[project]
name = ""
version = ""
description = ""
authors = [
    {name = "Matthew Newland", email = "matthewnnewland@gmail.com"},
]
dependencies = [
    "starlite>=1.45.0",
    "beanie>=1.15.4",
    "passlib>=1.7.4",
    "python-jose>=3.3.0",
]
requires-python = ">=3.11"
license = {text = "MIT"}
[project.optional-dependencies]

[build-system]
requires = ["pdm-pep517>=1.0.0"]
build-backend = "pdm.pep517.api"

[tool.pdm]
[tool.pdm.dev-dependencies]
dev = [
    "uvicorn>=0.20.0",
]
